Fix jumping of labels

--- a/vizro-core/src/vizro/static/css/dropdown.css
+++ b/vizro-core/src/vizro/static/css/dropdown.css
@@ -85,6 +85,7 @@
   color: var(--tags-text-color);
   font-size: var(--text-size-02);
   height: var(--tag-height);
+  height: 100%;
   letter-spacing: var(--letter-spacing-body-ui-02);
   margin: 0;
   padding: 0 var(--spacing-01);
